force-app/main/default/objects/BackMerge__c/fields/BackMergeFeild__c.field-meta.xml
<CustomField>
    <fullName>BackMergeFeild__c</fullName>
    <description>Testing feb</description>
    <label>BackMergeFeild</label>
    <length>12</length>
    <type>Text</type>
</CustomField>