force-app/main/default/objects/BackMerge__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>Field1</label>
    <length>13</length>
    <type>Text</type>
</CustomField>