force-app/main/default/objects/BackMerge__c/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <label>Field3</label>
    <length>67</length>
    <type>Text</type>
</CustomField>